--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.wordscramble/com.example.wordscramble.HelloApplication</mainClass>
+                            <mainClass>com.example.wordscramble/com.example.wordscramble.WordScramblerApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
